test/bad/sets/comprehension01.px

{{i} for i in 1..0}
